--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,11 @@ font-family: 'Roboto', sans-serif;
 
 font-family: 'Bungee Shade', cursive;
 ************************************/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     background: url("../img/assetss/background-01.jpg");
@@ -360,9 +365,6 @@ footer{
     font-weight: 600;
 }
 
-.post-container{
-
-}
 
 .contact-form legend{
     /* color: black; */
@@ -401,7 +403,6 @@ footer{
     margin: 0 auto;
 
     border: white 1px solid;
-    padding: 1rem 3rem 1.5rem 3rem;
     
     border-radius: 10px;
     background-color: rgb(241,244,247);
@@ -600,6 +601,10 @@ textarea{
     .form-register .input-group-text{
         font-weight: 600;
     }
+
+    .form{
+        padding: 1rem 3rem 1.5rem 3rem;
+    }
 }
 
 @media (max-width: 574px) {
@@ -684,17 +689,16 @@ textarea{
 *********************************************/
 
     .form-edit{
+        /*
         padding-left: 5px;
         padding-right: 5px;
+        width: 100%;*/
     }
 
     .custom-file-label{
         line-height: 1.6;
     }
 
-    .options-container{
-        padding-left: 1.5rem;
-    }
 
     .edit-container{
         width: 100%;
@@ -705,4 +709,5 @@ textarea{
         max-width: 240px;
         overflow: hidden;
     }
+
 }
