Fixing the same issues on post.html from edit_post.html

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,55 +1,56 @@
 {% extends 'base.html' %}
 {% block title %}Create a new post{% endblock %}
 {% block content %}
-
-<form class="form form-posting" method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
-    <fieldset class="fieldset">
-        <div class="game-title-section row form-group">                         
-            <div class="form-group col-12">
-                <h2 class="post-heading">New Review</h2>
-                <legend class="post-legend">Game Section</legend>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <label for="post-title" class="input-group-text">Game Title</label>
+<div class="container">
+    <form class="form form-posting" method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
+        <fieldset class="fieldset">
+            <div class="game-title-section row form-group">                         
+                <div class="form-group col-12">
+                    <h2 class="post-heading">New Review</h2>
+                    <legend class="post-legend">Game Section</legend>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <label for="post-title" class="input-group-text">Game Title</label>
+                        </div>
+                        <input type="text" class="form-control" name="post-title" id="post-title">
                     </div>
-                    <input type="text" class="form-control" name="post-title" id="post-title">
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <label for="post-title" class="input-group-text">Game Subtitle</label>
+                        </div>
+                        <input type="text" class="form-control" name="post-subtitle" id="post-subtitle">
+                    </div>
                 </div>
-
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <label for="post-title" class="input-group-text">Game Subtitle</label>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="input-group mb-3">                           
+                        <div class="input-group-prepend">
+                            <label for="release-date" class="input-group-text" id="inputGroupFileAddon01"
+                                >Game Release: 
+                            </label>
+                        </div>
+                        <div class="custom-file">
+                            <input type="date" class="form-control" name="release-date">
+                        </div>
                     </div>
-                    <input type="text" class="form-control" name="post-subtitle" id="post-subtitle">
                 </div>
                 
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="input-group mb-3">                           
-                            <div class="input-group-prepend">
-                                <label for="release-date" class="input-group-text" id="inputGroupFileAddon01"
-                                    >Game Release: 
-                                </label>
-                            </div>
-                            <div class="custom-file">
-                                <input type="date" class="form-control" name="release-date">
-                            </div>
+                <div class="col-lg-6">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" for="post-cover">Cover Picture</label>
                         </div>
-                    </div>
-                    
-                    <div class="col-lg-6">
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <label class="input-group-text" for="post-cover">Cover Picture</label>
-                            </div>
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="post-cover"  id="post-cover" aria-describedby="inputGroupFileAddon01">
-                                <label class="custom-file-label" for="post-cover">Choose file</label>
-                            </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" name="post-cover"  id="post-cover" aria-describedby="inputGroupFileAddon01">
+                            <label class="custom-file-label" for="post-cover">Choose file</label>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <hr>
+            <hr>
 
                 <div class="row">
                     <div class="col-lg-6">
@@ -68,126 +69,129 @@
                     </div>
                 </div>
 
-            </div>
 
-            <hr>
-            
-            <div class="pegi-field-boxes col-lg-4 col-md-4">
-                <legend for="plattform" class="form-check-label">Platfforms:</legend>
-                <div class="platforms-container form-group">
-                    {% for platform in platforms %}
-                        <input type="checkbox" class="form-check-input" name="platform" value="{{platform}}" id="{{platform}}">
-                        <label for="{{platform}}">{{platform}}</label>
-                        </br>
-                    {% endfor %}
-                </div>
-            </div>
-
-            <div class="pegi-description-boxes col-lg-4 col-md-4">
-                <legend>Pegi Description</legend>
-                <div class="description-container form-group">
-                    {% for pegi in pegi_desc %}
-                        <input type="checkbox" class="form-check-input" name="pegi-desc" value="{{pegi}}" id="{{pegi}}">
-                        <label class="" for="{{pegi}}">{{pegi_desc[pegi]}}</label>
-                        </br>
-                    {% endfor %}
-                </div>
-            </div>
-
-            <div class="pegi-description col-lg-4 col-md-4">
-                <legend>Pegi Rate</legend>
-                <div class="description-container form-group">
-                    {% for pegi_r in pegi_rate %}
-                        <input type="radio" class="form-check-input" name="pegi-rate" value="{{pegi_r}}" id="{{pegi_r}}">
-                        <label class="" for="{{pegi_r}}">{{pegi_r}}</label>
-                        </br>
-                    {% endfor %}
-                </div>
-            </div>
-            
-            <hr>
-            
-            <div class="form-group  col-lg-12">
-            <legend class="post-legend">Load 5 pictures for the post</legend>
-            <p>Select five pictres for the review's gallery</p>
-                <div class="input-group mb-3 col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 1 </span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_1"  id="gallery-1" aria-describedby="gallery-1">
-                        <label class="custom-file-label" for="gallery-1">Choose file</label>
-                    </div>
-                </div>
-                <div class="input-group mb-3 col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 2 </span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_2"  id="gallery-2" aria-describedby="gallery-2">
-                        <label class="custom-file-label" for="gallery-2">Choose file</label>
-                    </div>
-                </div>
-                <div class="input-group mb-3 col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 3 </span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_3"  id="gallery-3" aria-describedby="gallery-3">
-                        <label class="custom-file-label" for="gallery-3">Choose file</label>
-                    </div>
-                </div>
-                <div class="input-group mb-3 col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 4 </span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_4"  id="gallery-4" aria-describedby="gallery-4">
-                        <label class="custom-file-label" for="gallery-4">Choose file</label>
-                    </div>
-                </div>
-                <div class="input-group mb-3 col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 5 </span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_5"  id="gallery-5" aria-describedby="gallery-5">
-                        <label class="custom-file-label" for="gallery-5">Choose file</label>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            
-            <div class="col-12 form-group">
-                <legend>Review Section</legend>
-                <p>
-                    Html friendly: Give a go to your Html skills to add your owen spice to your post.
-                </p>
+                <hr>
                 <div class="row">
-                    <div class="col-lg-6 mb-3">
-                        <label for="pros" class="post-pros input-group-text">Pros</label>
-                        <textarea name="post-pros" class="form-control" id="pros" class="pros"></textarea>                    
+                    <div class="pegi-field-boxes col-lg-4 col-md-4">
+                        <legend for="plattform" class="form-check-label">Platfforms:</legend>
+                        <div class="platforms-container form-group">
+                            {% for platform in platforms %}
+                                <input type="checkbox" class="form-check-input" name="platform" value="{{platform}}" id="{{platform}}">
+                                <label for="{{platform}}">{{platform}}</label>
+                                </br>
+                            {% endfor %}
+                        </div>
                     </div>
-                    <div class="col-lg-6 mb-3">
-                        <label for="cons" class="post-cons input-group-text">Cons</label>
-                        <textarea name="post-cons" class="form-control" id="cons" class="cons"></textarea>                    
+    
+                    <div class="pegi-description-boxes col-lg-4 col-md-4">
+                        <legend>Pegi Description</legend>
+                        <div class="description-container form-group">
+                            {% for pegi in pegi_desc %}
+                                <input type="checkbox" class="form-check-input" name="pegi-desc" value="{{pegi}}" id="{{pegi}}">
+                                <label class="" for="{{pegi}}">{{pegi_desc[pegi]}}</label>
+                                </br>
+                            {% endfor %}
+                        </div>
                     </div>
-                    <div class="col-12 mb-3">
-                        <label for="post-review" class="post-review input-group-text">Review</label>
-                        <textarea name="post-review" class="form-control" id="post-review" class="post-review"></textarea>
+    
+                    <div class="pegi-description col-lg-4 col-md-4">
+                        <legend>Pegi Rate</legend>
+                        <div class="description-container form-group">
+                            {% for pegi_r in pegi_rate %}
+                                <input type="radio" class="form-check-input" name="pegi-rate" value="{{pegi_r}}" id="{{pegi_r}}">
+                                <label class="" for="{{pegi_r}}">{{pegi_r}}</label>
+                                </br>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
                 
                 
-            </div>
+                <hr>
+                <div class="row">
+                    <div class="form-group  col-lg-12">
+                    <legend class="post-legend">Load 5 pictures for the post</legend>
+                    <p>Select five pictres for the review's gallery</p>
+                        <div class="input-group mb-3 col-lg-12">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Picture 1 </span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="gallery_1"  id="gallery-1" aria-describedby="gallery-1">
+                                <label class="custom-file-label" for="gallery-1">Choose file</label>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3 col-lg-12">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Picture 2 </span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="gallery_2"  id="gallery-2" aria-describedby="gallery-2">
+                                <label class="custom-file-label" for="gallery-2">Choose file</label>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3 col-lg-12">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Picture 3 </span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="gallery_3"  id="gallery-3" aria-describedby="gallery-3">
+                                <label class="custom-file-label" for="gallery-3">Choose file</label>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3 col-lg-12">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Picture 4 </span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="gallery_4"  id="gallery-4" aria-describedby="gallery-4">
+                                <label class="custom-file-label" for="gallery-4">Choose file</label>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3 col-lg-12">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Picture 5 </span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="gallery_5"  id="gallery-5" aria-describedby="gallery-5">
+                                <label class="custom-file-label" for="gallery-5">Choose file</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12 form-group">
+                        <legend>Review Section</legend>
+                        <p>
+                            Html friendly: Give a go to your Html skills to add your owen spice to your post.
+                        </p>
+                        <div class="row">
+                            <div class="col-lg-6 mb-3">
+                                <label for="pros" class="post-pros input-group-text">Pros</label>
+                                <textarea name="post-pros" class="form-control" id="pros" class="pros"></textarea>                    
+                            </div>
+                            <div class="col-lg-6 mb-3">
+                                <label for="cons" class="post-cons input-group-text">Cons</label>
+                                <textarea name="post-cons" class="form-control" id="cons" class="cons"></textarea>                    
+                            </div>
+                            <div class="col-12 mb-3">
+                                <label for="post-review" class="post-review input-group-text">Review</label>
+                                <textarea name="post-review" class="form-control" id="post-review" class="post-review"></textarea>
+                            </div>
+                        </div>
+                        
+                        
+                    </div>
+    
+                    <div class="col-12 form-group">
+                        <input type="submit" value="Submit" class="form-control submit btn btn-success">
+                    </div>
+                </div>
+             
+        </fieldset>
+    </form>
 
-            <div class="col-12 form-group">
-                <input type="submit" value="Submit" class="form-control submit btn btn-success">
-            </div>
-        </div>  
-    </fieldset>
-</form>
-
-<div class="spacer col-12"></div>
-
+    <div class="spacer col-12"></div>
+</div>
 {% endblock %}
