Adding more cols to post and edit_post html files. Trying to undesrtand and add pagination to the home page to show a minimum of post cards and avoid overloading when the number of post gets humongus

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/css-circular-prog-bar.css') }}" rel="stylesheet">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="https://storage.needpix.com/rsynced_images/buttons-1294505_1280.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
