Adding new icons to review section on post and edit html

--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -190,7 +190,9 @@
                     
             <div class="row">
                 <div class="col-12">
-                    <legend><i class="far fa-file-code"></i>Review Section</legend>
+                    <legend>
+                        <i class="fas fa-file-word"></i>Review Section
+                    </legend>
                 </div>
                 
                 <div class="col-lg-6 mb-3">
