--- a/templates/post.html
+++ b/templates/post.html
@@ -178,9 +178,11 @@
             <hr>
             <div class="row">
                 <div class="col-12 form-group">
-                    <legend>Review Section</legend>
+                    <legend>
+                        <i class="fas fa-file-code"></i>Review Section
+                    </legend>
                     <p>
-                        Html friendly: Give a go to your Html skills to add your owen spice to your post.
+                        <i class="fas fa-file-code"></i>Html friendly: Give a go to your Html skills to add your owen spice to your post.
                     </p>
                 </div>
                 <div class="col-lg-6 mb-3">
